# claude-channel-guard

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
channel_guard/: __init__.py  close_grants.py  memory_write_guard.py  state.py  telegram_mcp_proxy.py
docs/: operations.md  threat-model.md
examples/claude-settings/: settings.example.json
examples/systemd/: claude-telegram.service.example
examples/telegram-guarded-plugin/: .mcp.json  README.md
examples/telegram-guarded-plugin/.claude-plugin/: plugin.json
hooks/: channel-guard-close-grants.sh  channel-guard-memory-write.sh
tests/: test_channel_guard.py
